Add POC implementations and validation results
Complete POC validation phase with 6 POCs passing:
- POC-1: SDL_GPU toon rendering (6x headroom)
- POC-2: ENet multiplayer sync (5-14x headroom)
- POC-3: Dense grid performance (4-39x headroom)
- POC-4: ECS simulation loop (44x headroom)
- POC-5: Transport network graph (2-8x headroom)
- POC-6: SDL_GPU UI overlay (~1.5x headroom)

Key findings:
- SDL_Renderer cannot coexist with SDL_GPU (use GPU for all)
- Union-find provides O(1) connectivity queries
- Aggregate flow model sufficient for traffic simulation

Project confidence: SA 8.0/10, GD 7.5/10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# POC build options
+option(BUILD_POC1 "Build POC-1: Toon Rendering" OFF)
+option(BUILD_POC2 "Build POC-2: ENet Multiplayer Snapshot Sync" OFF)
+option(BUILD_POC3 "Build POC-3: Dense Grid Performance" OFF)
+option(BUILD_POC4 "Build POC-4: ECS Simulation Loop" OFF)
+option(BUILD_POC6 "Build POC-6: SDL_GPU UI Overlay" OFF)
+
 # Find SDL3
 find_package(SDL3 REQUIRED CONFIG)
 
@@ -23,3 +30,24 @@ target_link_libraries(${PROJECT_NAME}
     PRIVATE
         SDL3::SDL3
 )
+
+# POC subdirectories
+if(BUILD_POC1)
+    add_subdirectory(poc/poc1-toon-rendering)
+endif()
+
+if(BUILD_POC2)
+    add_subdirectory(poc/poc2-enet-snapshot-sync)
+endif()
+
+if(BUILD_POC3)
+    add_subdirectory(poc/poc3-dense-grid)
+endif()
+
+if(BUILD_POC4)
+    add_subdirectory(poc/poc4-ecs-simulation)
+endif()
+
+if(BUILD_POC6)
+    add_subdirectory(poc/poc6-ui-overlay)
+endif()
