Complete Epic 0 critical issues + add /do-epic skill
Epic 0 Fixes (SA-verified):
- 0-007: Add Interpolatable<T> template for smooth rendering
- 0-013: Add Logger with file output, timestamps, LOG_* macros
- 0-017: Add mouse edge detection, cursor control, drag tracking
- 0-023: Add elevation field and serialization to PositionComponent
- 0-024: Add GAME_MASTER, OwnershipState enum, state_changed_at
- 0-031: Fix SyncPolicy enum, add ComponentMeta<T> metadata system

New Skill:
- /do-epic <N>: Execute epic with agent delegation and SA verification
- Enforces mandatory SA verification before marking tickets done
- Includes lessons learned from Epic 0 implementation issues

All tests passing (4/4).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set(SIMS3000_SOURCES
     src/app/DebugConsole.cpp
     src/app/ServerCLI.cpp
     src/core/Random.cpp
+    src/core/Logger.cpp
     src/render/Window.cpp
     src/input/InputSystem.cpp
     src/input/ActionMapping.cpp
@@ -61,6 +62,7 @@ set(SIMS3000_SOURCES
     src/assets/AudioLoader.cpp
     src/ecs/Registry.cpp
     src/ecs/SystemManager.cpp
+    src/ecs/Components.cpp
 )
 
 # Define header files (for IDE integration)
@@ -68,7 +70,9 @@ set(SIMS3000_HEADERS
     include/sims3000/core/types.h
     include/sims3000/core/ISimulationTime.h
     include/sims3000/core/ISimulatable.h
+    include/sims3000/core/Interpolatable.h
     include/sims3000/core/Serialization.h
+    include/sims3000/core/Logger.h
     include/sims3000/app/Application.h
     include/sims3000/app/AppState.h
     include/sims3000/app/Config.h
